@startuml WITS Database Schema

' Hide the spot
hide circle

' Avoid problems with angled crows feet
skinparam linetype ortho

' Define colors
!define ENTITY class
!define RELATIONSHIP class
!define PK <b>
!define FK <i>

' Define table styles
skinparam class {
    BackgroundColor White
    ArrowColor Black
    BorderColor Black
}

' Authentication & Authorization
ENTITY Users {
    PK Id: int
    Username: string
    Email: string
    PasswordHash: string
    FirstName: string
    LastName: string
    IsActive: bool
    IsAdmin: bool
    LastLoginAt: datetime
    CreatedAt: datetime
    UpdatedAt: datetime
    FK DefaultOrganizationId: int
}

ENTITY Roles {
    PK Id: int
    Name: string
    Description: string
    CreatedAt: datetime
}

ENTITY UserRoles {
    PK,FK UserId: int
    PK,FK RoleId: int
    CreatedAt: datetime
}

ENTITY Permissions {
    PK Id: int
    Name: string
    Description: string
    CreatedAt: datetime
}

ENTITY RolePermissions {
    PK,FK RoleId: int
    PK,FK PermissionId: int
    CreatedAt: datetime
}

ENTITY RefreshTokens {
    PK Id: int
    FK UserId: int
    Token: string
    ExpiresAt: datetime
    CreatedAt: datetime
}

' Organization Management
ENTITY Organizations {
    PK Id: int
    Name: string
    Description: string
    Website: string
    Email: string
    Phone: string
    Address: string
    CreatedAt: datetime
    UpdatedAt: datetime
    FK CreatedByUserId: int
}

ENTITY OrganizationMembers {
    PK Id: int
    FK OrganizationId: int
    FK UserId: int
    Role: string
    CreatedAt: datetime
}

' Project Management
ENTITY Projects {
    PK Id: int
    Name: string
    Description: string
    CreatedAt: datetime
    UpdatedAt: datetime
    FK CreatedByUserId: int
    FK OrganizationId: int
}

ENTITY ProjectMembers {
    PK Id: int
    FK ProjectId: int
    FK UserId: int
    Role: string
    CreatedAt: datetime
}

ENTITY ProjectTasks {
    PK Id: int
    FK ProjectId: int
    Title: string
    Description: string
    Status: string
    Priority: string
    FK AssignedToUserId: int
    CreatedAt: datetime
    UpdatedAt: datetime
    DueDate: datetime
}

ENTITY ProjectComments {
    PK Id: int
    FK ProjectId: int
    FK UserId: int
    Content: string
    CreatedAt: datetime
}

' Ticket Management
ENTITY TicketTypes {
    PK Id: int
    Name: string
    Description: string
    CreatedAt: datetime
}

ENTITY TicketPriorities {
    PK Id: int
    Name: string
    Description: string
    CreatedAt: datetime
}

ENTITY TicketStatuses {
    PK Id: int
    Name: string
    Description: string
    CreatedAt: datetime
}

ENTITY Tickets {
    PK Id: int
    Title: string
    Description: string
    FK TypeId: int
    FK PriorityId: int
    FK StatusId: int
    FK ProjectId: int
    FK CreatedByUserId: int
    FK AssignedToUserId: int
    CreatedAt: datetime
    UpdatedAt: datetime
    DueDate: datetime
}

ENTITY TicketComments {
    PK Id: int
    FK TicketId: int
    FK UserId: int
    Content: string
    CreatedAt: datetime
}

ENTITY TicketAttachments {
    PK Id: int
    FK TicketId: int
    FileName: string
    FilePath: string
    FileSize: int
    ContentType: string
    FK UploadedByUserId: int
    CreatedAt: datetime
}

ENTITY TicketHistory {
    PK Id: int
    FK TicketId: int
    FK ChangedByUserId: int
    FieldName: string
    OldValue: string
    NewValue: string
    CreatedAt: datetime
}

' Activity & Notifications
ENTITY Activities {
    PK Id: int
    Type: string
    Description: string
    EntityType: string
    EntityId: int
    FK UserId: int
    FK OrganizationId: int
    FK ProjectId: int
    FK TicketId: int
    Data: string
    CreatedAt: datetime
}

ENTITY ActivityComments {
    PK Id: int
    FK ActivityId: int
    FK UserId: int
    Content: string
    CreatedAt: datetime
}

ENTITY Notifications {
    PK Id: int
    FK UserId: int
    Type: string
    Title: string
    Message: string
    IsRead: bool
    FK ActivityId: int
    FK ProjectId: int
    FK TicketId: int
    CreatedAt: datetime
}

' Relationships - Auth
Users "1" -- "0..*" UserRoles
Roles "1" -- "0..*" UserRoles
Roles "1" -- "0..*" RolePermissions
Permissions "1" -- "0..*" RolePermissions
Users "1" -- "0..*" RefreshTokens

' Relationships - Organization
Organizations "1" -- "0..*" OrganizationMembers
Users "1" -- "0..*" OrganizationMembers
Organizations "1" -- "0..*" Projects
Users "1" -- "0..*" Organizations : created >
Users "0..1" -- "0..1" Organizations : default_org >

' Relationships - Projects
Projects "1" -- "0..*" ProjectMembers
Users "1" -- "0..*" ProjectMembers
Projects "1" -- "0..*" ProjectTasks
Users "1" -- "0..*" ProjectTasks : assigned_to >
Projects "1" -- "0..*" ProjectComments
Users "1" -- "0..*" ProjectComments : created >
Users "1" -- "0..*" Projects : created >

' Relationships - Tickets
Tickets "1" -- "0..*" TicketComments
Users "1" -- "0..*" TicketComments : created >
Tickets "1" -- "0..*" TicketAttachments
Users "1" -- "0..*" TicketAttachments : uploaded >
Tickets "1" -- "0..*" TicketHistory
Users "1" -- "0..*" TicketHistory : changed >
TicketTypes "1" -- "0..*" Tickets : type >
TicketPriorities "1" -- "0..*" Tickets : priority >
TicketStatuses "1" -- "0..*" Tickets : status >
Projects "1" -- "0..*" Tickets
Users "1" -- "0..*" Tickets : created >
Users "1" -- "0..*" Tickets : assigned_to >

' Relationships - Activities
Activities "1" -- "0..*" ActivityComments
Users "1" -- "0..*" ActivityComments : created >
Users "1" -- "0..*" Activities : performed >
Organizations "1" -- "0..*" Activities : contains >
Projects "1" -- "0..*" Activities : related_to >
Tickets "1" -- "0..*" Activities : related_to >

' Relationships - Notifications
Users "1" -- "0..*" Notifications : receives >
Activities "1" -- "0..*" Notifications : triggers >
Projects "1" -- "0..*" Notifications : related_to >
Tickets "1" -- "0..*" Notifications : related_to >

@enduml
